[package]
name = "rust_set_remove_benchmark"
version = "0.1.0"
authors = ["Zhenbo Li <litimetal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dev-dependencies]

criterion = "0.3"

[[bench]]
name = "hashset_btreeset_remove_benchmark"
harness = false
